llullParser.py
# Generated from llull.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class llullParser ( Parser ):

    grammarFileName = "llull.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'void'", "'if'", "'else'", "'while'", 
                     "'for'", "'read'", "'write'", "'array'", "'get'", "'set'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'<>'", 
                     "'<'", "'>'", "'<='", "'>='", "'='", "'('", "')'", 
                     "'{'", "'}'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SUMA", "RESTA", 
                      "MULT", "DIV", "MOD", "IGUAL", "NIGUAL", "MENYSQUE", 
                      "MESQUE", "MENYSIGQUE", "MESIGQUE", "ASSIGNAR", "LPARENTESI", 
                      "RPARENSTESI", "LCLAUDATOR", "RCLAUDATOR", "COMA", 
                      "PUNTCOMA", "VARIABLE", "ENTER", "COMENTARIS", "TEXT", 
                      "WS" ]

    RULE_initialRule = 0
    RULE_definicioProc = 1
    RULE_condicional = 2
    RULE_whilee = 3
    RULE_forr = 4
    RULE_interior = 5
    RULE_assignacio = 6
    RULE_llegir = 7
    RULE_escriure = 8
    RULE_creadorArray = 9
    RULE_getArray = 10
    RULE_setArray = 11
    RULE_cridaProc = 12
    RULE_expr = 13

    ruleNames =  [ "initialRule", "definicioProc", "condicional", "whilee", 
                   "forr", "interior", "assignacio", "llegir", "escriure", 
                   "creadorArray", "getArray", "setArray", "cridaProc", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    SUMA=11
    RESTA=12
    MULT=13
    DIV=14
    MOD=15
    IGUAL=16
    NIGUAL=17
    MENYSQUE=18
    MESQUE=19
    MENYSIGQUE=20
    MESIGQUE=21
    ASSIGNAR=22
    LPARENTESI=23
    RPARENSTESI=24
    LCLAUDATOR=25
    RCLAUDATOR=26
    COMA=27
    PUNTCOMA=28
    VARIABLE=29
    ENTER=30
    COMENTARIS=31
    TEXT=32
    WS=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class InitialRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(llullParser.EOF, 0)

        def definicioProc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.DefinicioProcContext)
            else:
                return self.getTypedRuleContext(llullParser.DefinicioProcContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_initialRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialRule" ):
                return visitor.visitInitialRule(self)
            else:
                return visitor.visitChildren(self)




    def initialRule(self):

        localctx = llullParser.InitialRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_initialRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.T__0:
                self.state = 28
                self.definicioProc()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(llullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinicioProcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.VARIABLE)
            else:
                return self.getToken(llullParser.VARIABLE, i)

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def LCLAUDATOR(self):
            return self.getToken(llullParser.LCLAUDATOR, 0)

        def interior(self):
            return self.getTypedRuleContext(llullParser.InteriorContext,0)


        def RCLAUDATOR(self):
            return self.getToken(llullParser.RCLAUDATOR, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMA)
            else:
                return self.getToken(llullParser.COMA, i)

        def getRuleIndex(self):
            return llullParser.RULE_definicioProc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinicioProc" ):
                return visitor.visitDefinicioProc(self)
            else:
                return visitor.visitChildren(self)




    def definicioProc(self):

        localctx = llullParser.DefinicioProcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definicioProc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(llullParser.T__0)
            self.state = 37
            self.match(llullParser.VARIABLE)
            self.state = 38
            self.match(llullParser.LPARENTESI)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.VARIABLE:
                self.state = 39
                self.match(llullParser.VARIABLE)
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==llullParser.COMA:
                    self.state = 40
                    self.match(llullParser.COMA)
                    self.state = 41
                    self.match(llullParser.VARIABLE)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 49
            self.match(llullParser.RPARENSTESI)
            self.state = 50
            self.match(llullParser.LCLAUDATOR)
            self.state = 51
            self.interior()
            self.state = 52
            self.match(llullParser.RCLAUDATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondicionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def LCLAUDATOR(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.LCLAUDATOR)
            else:
                return self.getToken(llullParser.LCLAUDATOR, i)

        def interior(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.InteriorContext)
            else:
                return self.getTypedRuleContext(llullParser.InteriorContext,i)


        def RCLAUDATOR(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.RCLAUDATOR)
            else:
                return self.getToken(llullParser.RCLAUDATOR, i)

        def getRuleIndex(self):
            return llullParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = llullParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(llullParser.T__1)
            self.state = 55
            self.match(llullParser.LPARENTESI)
            self.state = 56
            self.expr(0)
            self.state = 57
            self.match(llullParser.RPARENSTESI)
            self.state = 58
            self.match(llullParser.LCLAUDATOR)
            self.state = 59
            self.interior()
            self.state = 60
            self.match(llullParser.RCLAUDATOR)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==llullParser.T__2:
                self.state = 61
                self.match(llullParser.T__2)
                self.state = 62
                self.match(llullParser.LCLAUDATOR)
                self.state = 63
                self.interior()
                self.state = 64
                self.match(llullParser.RCLAUDATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhileeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def LCLAUDATOR(self):
            return self.getToken(llullParser.LCLAUDATOR, 0)

        def interior(self):
            return self.getTypedRuleContext(llullParser.InteriorContext,0)


        def RCLAUDATOR(self):
            return self.getToken(llullParser.RCLAUDATOR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_whilee

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilee" ):
                return visitor.visitWhilee(self)
            else:
                return visitor.visitChildren(self)




    def whilee(self):

        localctx = llullParser.WhileeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_whilee)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(llullParser.T__3)
            self.state = 69
            self.match(llullParser.LPARENTESI)
            self.state = 70
            self.expr(0)
            self.state = 71
            self.match(llullParser.RPARENSTESI)
            self.state = 72
            self.match(llullParser.LCLAUDATOR)
            self.state = 73
            self.interior()
            self.state = 74
            self.match(llullParser.RCLAUDATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ForrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def assignacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssignacioContext)
            else:
                return self.getTypedRuleContext(llullParser.AssignacioContext,i)


        def PUNTCOMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.PUNTCOMA)
            else:
                return self.getToken(llullParser.PUNTCOMA, i)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def LCLAUDATOR(self):
            return self.getToken(llullParser.LCLAUDATOR, 0)

        def interior(self):
            return self.getTypedRuleContext(llullParser.InteriorContext,0)


        def RCLAUDATOR(self):
            return self.getToken(llullParser.RCLAUDATOR, 0)

        def getRuleIndex(self):
            return llullParser.RULE_forr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForr" ):
                return visitor.visitForr(self)
            else:
                return visitor.visitChildren(self)




    def forr(self):

        localctx = llullParser.ForrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_forr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(llullParser.T__4)
            self.state = 77
            self.match(llullParser.LPARENTESI)
            self.state = 78
            self.assignacio()
            self.state = 79
            self.match(llullParser.PUNTCOMA)
            self.state = 80
            self.expr(0)
            self.state = 81
            self.match(llullParser.PUNTCOMA)
            self.state = 82
            self.assignacio()
            self.state = 83
            self.match(llullParser.RPARENSTESI)
            self.state = 84
            self.match(llullParser.LCLAUDATOR)
            self.state = 85
            self.interior()
            self.state = 86
            self.match(llullParser.RCLAUDATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InteriorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignacio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.AssignacioContext)
            else:
                return self.getTypedRuleContext(llullParser.AssignacioContext,i)


        def llegir(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.LlegirContext)
            else:
                return self.getTypedRuleContext(llullParser.LlegirContext,i)


        def escriure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.EscriureContext)
            else:
                return self.getTypedRuleContext(llullParser.EscriureContext,i)


        def condicional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.CondicionalContext)
            else:
                return self.getTypedRuleContext(llullParser.CondicionalContext,i)


        def whilee(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.WhileeContext)
            else:
                return self.getTypedRuleContext(llullParser.WhileeContext,i)


        def forr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ForrContext)
            else:
                return self.getTypedRuleContext(llullParser.ForrContext,i)


        def cridaProc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.CridaProcContext)
            else:
                return self.getTypedRuleContext(llullParser.CridaProcContext,i)


        def creadorArray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.CreadorArrayContext)
            else:
                return self.getTypedRuleContext(llullParser.CreadorArrayContext,i)


        def getArray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.GetArrayContext)
            else:
                return self.getTypedRuleContext(llullParser.GetArrayContext,i)


        def setArray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.SetArrayContext)
            else:
                return self.getTypedRuleContext(llullParser.SetArrayContext,i)


        def getRuleIndex(self):
            return llullParser.RULE_interior

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterior" ):
                return visitor.visitInterior(self)
            else:
                return visitor.visitChildren(self)




    def interior(self):

        localctx = llullParser.InteriorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interior)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << llullParser.T__1) | (1 << llullParser.T__3) | (1 << llullParser.T__4) | (1 << llullParser.T__5) | (1 << llullParser.T__6) | (1 << llullParser.T__7) | (1 << llullParser.T__8) | (1 << llullParser.T__9) | (1 << llullParser.VARIABLE))) != 0):
                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.assignacio()
                    pass

                elif la_ == 2:
                    self.state = 89
                    self.llegir()
                    pass

                elif la_ == 3:
                    self.state = 90
                    self.escriure()
                    pass

                elif la_ == 4:
                    self.state = 91
                    self.condicional()
                    pass

                elif la_ == 5:
                    self.state = 92
                    self.whilee()
                    pass

                elif la_ == 6:
                    self.state = 93
                    self.forr()
                    pass

                elif la_ == 7:
                    self.state = 94
                    self.cridaProc()
                    pass

                elif la_ == 8:
                    self.state = 95
                    self.creadorArray()
                    pass

                elif la_ == 9:
                    self.state = 96
                    self.getArray()
                    pass

                elif la_ == 10:
                    self.state = 97
                    self.setArray()
                    pass


                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignacioContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def ASSIGNAR(self):
            return self.getToken(llullParser.ASSIGNAR, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def getRuleIndex(self):
            return llullParser.RULE_assignacio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignacio" ):
                return visitor.visitAssignacio(self)
            else:
                return visitor.visitChildren(self)




    def assignacio(self):

        localctx = llullParser.AssignacioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignacio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(llullParser.VARIABLE)
            self.state = 104
            self.match(llullParser.ASSIGNAR)
            self.state = 105
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LlegirContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def getRuleIndex(self):
            return llullParser.RULE_llegir

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlegir" ):
                return visitor.visitLlegir(self)
            else:
                return visitor.visitChildren(self)




    def llegir(self):

        localctx = llullParser.LlegirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_llegir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(llullParser.T__5)
            self.state = 108
            self.match(llullParser.LPARENTESI)
            self.state = 109
            self.match(llullParser.VARIABLE)
            self.state = 110
            self.match(llullParser.RPARENSTESI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EscriureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.TEXT)
            else:
                return self.getToken(llullParser.TEXT, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMA)
            else:
                return self.getToken(llullParser.COMA, i)

        def getRuleIndex(self):
            return llullParser.RULE_escriure

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscriure" ):
                return visitor.visitEscriure(self)
            else:
                return visitor.visitChildren(self)




    def escriure(self):

        localctx = llullParser.EscriureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_escriure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(llullParser.T__6)
            self.state = 113
            self.match(llullParser.LPARENTESI)
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [llullParser.T__8, llullParser.LPARENTESI, llullParser.VARIABLE, llullParser.ENTER]:
                self.state = 114
                self.expr(0)
                pass
            elif token in [llullParser.TEXT]:
                self.state = 115
                self.match(llullParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==llullParser.COMA:
                self.state = 118
                self.match(llullParser.COMA)
                self.state = 121
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [llullParser.T__8, llullParser.LPARENTESI, llullParser.VARIABLE, llullParser.ENTER]:
                    self.state = 119
                    self.expr(0)
                    pass
                elif token in [llullParser.TEXT]:
                    self.state = 120
                    self.match(llullParser.TEXT)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(llullParser.RPARENSTESI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CreadorArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def COMA(self):
            return self.getToken(llullParser.COMA, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def getRuleIndex(self):
            return llullParser.RULE_creadorArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreadorArray" ):
                return visitor.visitCreadorArray(self)
            else:
                return visitor.visitChildren(self)




    def creadorArray(self):

        localctx = llullParser.CreadorArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_creadorArray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(llullParser.T__7)
            self.state = 131
            self.match(llullParser.LPARENTESI)
            self.state = 132
            self.match(llullParser.VARIABLE)
            self.state = 133
            self.match(llullParser.COMA)
            self.state = 134
            self.expr(0)
            self.state = 135
            self.match(llullParser.RPARENSTESI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GetArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def COMA(self):
            return self.getToken(llullParser.COMA, 0)

        def expr(self):
            return self.getTypedRuleContext(llullParser.ExprContext,0)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def getRuleIndex(self):
            return llullParser.RULE_getArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetArray" ):
                return visitor.visitGetArray(self)
            else:
                return visitor.visitChildren(self)




    def getArray(self):

        localctx = llullParser.GetArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_getArray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(llullParser.T__8)
            self.state = 138
            self.match(llullParser.LPARENTESI)
            self.state = 139
            self.match(llullParser.VARIABLE)
            self.state = 140
            self.match(llullParser.COMA)
            self.state = 141
            self.expr(0)
            self.state = 142
            self.match(llullParser.RPARENSTESI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMA)
            else:
                return self.getToken(llullParser.COMA, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def getRuleIndex(self):
            return llullParser.RULE_setArray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetArray" ):
                return visitor.visitSetArray(self)
            else:
                return visitor.visitChildren(self)




    def setArray(self):

        localctx = llullParser.SetArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_setArray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(llullParser.T__9)
            self.state = 145
            self.match(llullParser.LPARENTESI)
            self.state = 146
            self.match(llullParser.VARIABLE)
            self.state = 147
            self.match(llullParser.COMA)
            self.state = 148
            self.expr(0)
            self.state = 149
            self.match(llullParser.COMA)
            self.state = 150
            self.expr(0)
            self.state = 151
            self.match(llullParser.RPARENSTESI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CridaProcContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(llullParser.VARIABLE, 0)

        def LPARENTESI(self):
            return self.getToken(llullParser.LPARENTESI, 0)

        def RPARENSTESI(self):
            return self.getToken(llullParser.RPARENSTESI, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llullParser.ExprContext)
            else:
                return self.getTypedRuleContext(llullParser.ExprContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(llullParser.COMA)
            else:
                return self.getToken(llullParser.COMA, i)

        def getRuleIndex(self):
            return llullParser.RULE_cridaProc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCridaProc" ):
                return visitor.visitCridaProc(self)
            else:
                return visitor.visitChildren(self)




    def cridaProc(self):
